--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
+    "mongoose": "^8.15.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
