--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
+    "mongodb": "^6.16.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
